fix weird alignment issue

--- a/src/css/postcard.module.scss
+++ b/src/css/postcard.module.scss
@@ -9,6 +9,8 @@
   box-shadow: 0 1px 6px rgba(57, 73, 76, 0.35);
 }
 .info {
+  display: flex;
+  justify-content: center;
   padding: 1rem 0;
   p {
     padding: 20px 0 30px 0;
